[package]
name = "streams"
version = "0.1.0"
authors = ["Devin Ragotzy <devin.ragotzy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.5"
tokio = "0.1.20"
futures = "0.1.27"
failure_derive = "0.1.5"
serde = "1.0.91"
serde_derive = "1.0.91"
serde_json = "1.0.39"
lazy_static = "1.3.0"
bytes="0.4.12"
log = "0.4.6"